Handle revert of mta deployment and descriptors